        - Fixed an issue where a random SSH termination wasn't correctly handled by the CDSF distribution process.
        - Restored the previous Command Set ownership model from before 2.0.2 as the main reason for hidden commands 
          (possible embedded private data in a Command Set) has been superseded by the functions provided by *VAR.
2.2.1   - Fixed an issue with the IP allocation system reporting the wrong block when full.
        - Removed taint requirement from locally executed only scripts.
        - Fixed missing formatting for variables in Command Sets.
        - Added minor username tag for snapshot tracking.
        - Fixed a bug related to correctly capturing hashes where the key or value ended in '='.
        - Fixed some block size display issues for /32 blocks. (now correctly uses parent block for some values).
        - Fixed an issue passing multi-line variables when using a Windows based browser.
        - Added some logic to determine if a system is a VM before performing a snapshot operation.
        - Fixed some missing audit colours and standardised CSS colour names.
        - Fixed a bug where commands with HTML in them would display as HTML instead of raw commands.
        - Fixed an issue where temporary files were not cleaned up if hosts did not recover from a controlled reboot.
        - Adjusted the Command Set Git push mechanism to substitute the *SUDO tag with a useful shell command.
        - Fixed a greedy glob in the Command Set Dump process that was stripping spaces in some circumstances.
        - Added a missing view mode for Redirects.
        - Fixed some persistent filters for better usability when dealing with large numbers of redirects / reverse proxy entries.
        - Modified some logic to find server names within aliases when bundling redirects together.
2.2.0   - Added handler for incorrect use of *WAITFOR and *SEND together in the same command.