@@ -3,6 +3,7 @@
         - Fixed an issue where a random SSH termination wasn't correctly handled by the CDSF distribution process.
         - Restored the previous Command Set ownership model from before 2.0.2 as the main reason for hidden commands 
           (possible embedded private data in a Command Set) has been superseded by the functions provided by *VAR.
+        - Added better handing for mid-login errors during D-Shell SSH initialisation.
 2.2.1   - Fixed an issue with the IP allocation system reporting the wrong block when full.
         - Removed taint requirement from locally executed only scripts.
         - Fixed missing formatting for variables in Command Sets.
